# edu-presburger

./: .gitignore  README.md  docker-compose.yml  flake.nix  pyproject.toml  setup.py
analysis/: data.ipynb  data_processing.py  generate_tests.py  main.py  naming_convention.txt  plot.ipynb  run_tests.py  tests.py  tests.tex
analysis/plots/: count_vs_states.csv  count_vs_time.csv
analysis/test_results/: results_num_disjunctions.csv  test_results.csv
analysis/tests/: generated_formulas.csv  test_constants.csv  test_num_disjunctions.csv
backend/: Dockerfile  ast_nodes.py  automaton_builder.py  benchmark.py  expander.py  grammar.lark  graph.dot  graph.tex  main.py  parser.py  processing.py  requirements.txt  syntax_tree_pure  syntax_tree_visualizier.py  test.py  visual_cleanup.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/.next/: BUILD_ID  app-path-routes-manifest.json  (+6 more)
presburger_converter/: __init__.py  pipeline.py  pyproject.toml  solutions.py  visualization.py
presburger_converter/automaton/: __init__.py  automaton_builder.py  core.py  mata_io.py
presburger_converter/parsing/: __init__.py  ast_nodes.py  expander.py  grammar.lark  macro_preprocessor.py  parser.py  syntax_tree_visualizier.py  utils.py
presburger_converter/solutions/: __init__.py  finder.py
presburger_converter/viz/: __init__.py  dot.py
tests/: ast_to_z3.py  solutions.py  temp.py  test.mata  tests.py  z3_helpers.py
thesis.egg-info/: PKG-INFO  SOURCES.txt
vm/: configuration.nix  flake.nix  nixos-24.05.20241230.b134951-x86_64-linux.ova  result
(+230 files in other folders)
